reposition html file

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="../images/favicon-32x32.png"
+      href="./images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" type="text/css" media="all" />
     <title>Frontend Mentor | [Challenge Name Here]</title>
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="dist/css/main.css" />
   </head>
   <body>
     <div class="container">
@@ -22,7 +22,7 @@
         <div class="phone_camera"></div>
         <nav>
           <i class="fa fa-chevron-left"></i>
-          <img src="../images/avatar.jpg" alt="avatar" />
+          <img src="./images/avatar.jpg" alt="avatar" />
           <div class="nav_texts">
             <h3>Samuel Green</h3>
             <p>Available to Walk</p>
@@ -41,9 +41,9 @@
         </div>
         <div class="right-wrapper">
           <div class="pictures right">
-            <img src="../images/dog-image-1.jpg" alt="dog-image-1" />
-            <img src="../images/dog-image-2.jpg" alt="dog-image-2" />
-            <img src="../images/dog-image-3.jpg" alt="dog-image-3" />
+            <img src="./images/dog-image-1.jpg" alt="dog-image-1" />
+            <img src="./images/dog-image-2.jpg" alt="dog-image-2" />
+            <img src="./images/dog-image-3.jpg" alt="dog-image-3" />
           </div>
           <div class="chat right">
             <p class="chat-text">Here are a few pictures. She’s a happy girl!</p>
