--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
-
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@i_am_ajayii" />
+    <meta name="twitter:title" content="Frontend Mentor| Sass | chat-app-ui" />
+    <meta name="twitter:description" content="A chat app-ui i found on frontendmentorbuilt with sass" />
     <link
       rel="icon"
       type="image/png"
@@ -12,7 +15,7 @@
       href="./images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" type="text/css" media="all" />
-    <title>Frontend Mentor | [Challenge Name Here]</title>
+    <title>Frontend Mentor | Sass | chat-app-ui</title>
     <link rel="stylesheet" href="dist/css/main.css" />
   </head>
   <body>
